[tool.poetry]
name = "cipher_yx2625"
version = "0.1.0"
description = "simple Python package to cipher textual data"
authors = ["connixu <y.connie.xu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
